feat: implement URL shortening service
- Add express server setup with CORS and JSON parsing
- Create URL controller with validation and database interaction
- Implement URL schema using Zod for input validation
- Generate unique short codes for URLs
- Add router for URL shortening endpoint
- Update Prisma client configuration for PostgreSQL adapter
- Add necessary dependencies and scripts in package.json

--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,23 @@
   "private": true,
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "prisma": "^7.2.0"
+  },
+  "scripts": {
+    "dev": "bun --watch src/index.ts",
+    "start": "bun run src/index.ts"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "@prisma/adapter-d1": "^7.2.0",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
+    "zod": "^4.3.5"
   }
 }
